fix magick dependency bug

--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -87,12 +87,12 @@ Otherwise, install and use the "examples" package.
 First, get the example data:
 
 ```{r}
-if(!require(remotes)){
+if(!requireNamespace("remotes")){
   # Install the "remotes" package if not found:
   install.packages("remotes")
 }
 
-if(!require(rcell2.examples)){
+if(!requireNamespace("rcell2.examples")){
   # Install the "rcell2.examples" package if not found:
   remotes::install_github("darksideoftheshmoo/rcell2.examples")
 }
@@ -219,7 +219,7 @@ Function `load_cell_data` from `rcell2` can load those tables as well.
 
 ```{r eval=F}
 # rcell2's main analysis package
-if(!require(rcell2)){
+if(!requireNamespace("rcell2")){
    devtools::install_github("darksideoftheshmoo/rcell2")
 }
 
@@ -969,7 +969,7 @@ Alternatively, function `load_cell_data` from `rcell2` can load those tables as 
 
 ```{r eval=F}
 # rcell2's main analysis package
-if(!require(rcell2)){
+if(!requireNamespace("rcell2")){
    devtools::install_github("darksideoftheshmoo/rcell2")
 }
 
@@ -1011,7 +1011,20 @@ rcell2.cellid::cellid_output_descriptions(list.output = F)
 
 ### Tuning parameters
 
-Sometimes we want to test out many parameter combinations fefor running Cell-ID in the full dataset.
+Sometimes we want to test out many parameter combinations 
+before running Cell-ID in the full dataset.
+
+This functionality requires the `magick` R package,
+and ImageMagick on your system (which can be obtained 
+[here](https://imagemagick.org/script/download.php)). 
+
+Run the following to install the R package if absent:
+
+```{r}
+if(!requireNamespace("magick")){
+  install.packages("magick")
+}
+```
 
 #### Example setup
 
